--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "javascriptqueue",
   "version": "1.0.0",
-  "description": "A Queue implementation written in JavaScript, hosted by Node, tested by Mocha.",
-  "main": "index.js",
+  "description": "A Queue implementation written in JavaScript, tested by Mocha.",
+  "main": "Queue.js",
   "scripts": {
-    "test": "test"
+    "test": "mocha --reporter spec"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/michaelp0730/JavaScriptQueue.git"
   },
   "keywords": [
-    "javascript",
     "queue",
-    "node",
+    "javascript",
     "mocha"
   ],
   "author": "michaelp0730",
@@ -21,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/michaelp0730/JavaScriptQueue/issues"
   },
-  "homepage": "https://github.com/michaelp0730/JavaScriptQueue#readme"
+  "homepage": "https://github.com/michaelp0730/JavaScriptQueue#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.0.1"
+  }
 }
